--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-scripts": "3.4.3",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
